Added local storage and icon.

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "AI Dictionary for Chromium",
   "version": "1.0.0",
   "description": "Adds a context menu item to bring up a an AI dictionary popup",
+  "icons": {
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-32.png",
+    "128": "icons/icon-128.png"
+  },
   "permissions": [
     "activeTab",
     "scripting",
